<resources>
    <string name="app_name">penguin-app</string>
    <string name="login_title">Log in</string>
    <string name="input_user">Username</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="login_button">Log in</string>
    <string name="login_text_register">Don\'t have an account?</string>
    <string name="login_text_link_register">Register now!</string>
    <string name="register_title">Sign up</string>
    <string name="register_button">Continue</string>
    <string name="register_text_login">Already have an account?</string>
    <string name="register_text_link_login">Log in</string>
    <string name="loading_text">Loading all penguins for you…</string>
    <string name="home_title">Welcome to the penguin app!</string>
    <string name="home_description">On this app you can see completely random penguins</string>
    <string name="home_button">Show other penguin</string>
</resources>