<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/home_title"
            android:textSize="45sp"
            android:layout_marginTop="50dp"
            android:textColor="#003249"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_description"
            android:textSize="18sp"
            android:textColor="#003249"
            android:textAlignment="center"
            android:paddingHorizontal="80dp"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/img_random"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="15dp"
                    />
                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:id="@+id/button_change_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/home_button"
                        style="?attr/buttonStyle"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        android:layout_marginBottom="15dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginVertical="25dp"
            android:padding="15dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src=""
        </LinearLayout>-->


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>